change plugin name

--- a/plugin.yaml
+++ b/plugin.yaml
@@ -1,4 +1,4 @@
-name: "cj-switch"
+name: "cj-toggle"
 shortDesc: "Used to enable/disable cronjobs"
 longDesc: >
   The list of the features:
@@ -13,13 +13,13 @@ longDesc: >
     #
     # Inverts spec.suspend flag for all namespaces or specific one.
     #
-    kubectl cj-switch [-A|--all-namespaces|-n|--namespace]
+    kubectl cj-toggle [-A|--all-namespaces|-n|--namespace]
     #
     # Inverts spec.suspend flag of all cron jobs with the specific label. Could be used in conjunction with namespace options, -A -n etc.
     #
-    kubectl cj-switch -l key=value
+    kubectl cj-toggle -l key=value
     #
     # Sets spec.suspend flag to false/true for all cron jobs within all namespaces.
     #
-    kubectl cj-switch -A -f ./<FILENAME> -s [false|true]
-command: ./cj-switch.sh
+    kubectl cj-toggle -A -f ./<FILENAME> -s [false|true]
+command: ./cj-toggle.sh
